# devais

./: .gitignore  AGENTS.md  README.md  enclosure.html  enclosure.stl  index.html  pyproject.toml
.claude/skills/cad-modeller-skill/: QUICK_REFERENCE.md  README.md  SKILL.md  example_enclosure.py  metadata.json
.github/workflows/: deploy.yml
cad/: enclosure.py  test_cadquery.py
context/: enclosure-spec.md  enclosure-work.md  gemini_cad_skill.md
docs/: cad-guide.md
hardware/: README.md  audio.py  devais.py  devais_simplified.py  power_management.py  user_interface.py
hardware/devais_simplified/: Devais_Simplified.json  Devais_Simplified.kicad_pro  Devais_Simplified.kicad_sch  Devais_Simplified.net
web/: enclosure.html  large_button.html
